--- a/configs/embedding_config.yaml
+++ b/configs/embedding_config.yaml
@@ -1,3 +1,2 @@
 model: 
-  model_name_or_path: "VoVanPhuc/sup-SimCSE-VietNamese-phobert-base"
-  max_len: 256
+  model_name: "VoVanPhuc/sup-SimCSE-VietNamese-phobert-base"
