refactor: add Singleton for chat, embedd, generator

--- a/crawler/scrapy.cfg
+++ b/crawler/scrapy.cfg
@@ -7,5 +7,7 @@
 default = crawler.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = http://localhost:6800/
+username = scrapy
+password = secret
 project = crawler
