--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ click==8.1.7
 einops==0.7.0
 gguf==0.6.0
 huggingface-hub==0.21.4
-langchain==0.1.12
-langchain-community==0.0.28
-langchain-core==0.1.31
+langchain
+langchain-community
+langchain-core
 numpy==1.24.4
 pandas==2.0.3
 pydantic==2.6.4
@@ -15,7 +15,6 @@ PyYAML==6.0.1
 requests==2.31.0
 safetensors==0.4.2
 sentencepiece==0.1.99
-torch==2.1.2
 transformers==4.38.2
 grpcio==1.60.0 
 pymilvus==2.3.6
@@ -31,4 +30,5 @@ scrapyd==1.4.3
 python-telegram-bot==21.0.1
 pyngrok
 g4f
-rank_bm25==0.2.2
+rank_bm25
+pyvi
