--- a/configs/llm_config.yaml
+++ b/configs/llm_config.yaml
@@ -4,8 +4,14 @@ model:
     n_gpu_layers: -1
     n_batch: 512
     n_ctx: 8192
+    max_tokens: 8192
     f16_kv: True
     verbose: True
+    do_sample: False
+    top_k: 20
+    temperature: 0.7
+    repetition_penalty: 1.05
+
     
   inference_params: 
     input_prefix: "<s>[INST]"
